[gd_scene load_steps=4 format=3 uid="uid://bf23ht3ilksv2"]

[ext_resource type="Script" uid="uid://ba7a57w8l7vf8" path="res://stages/start.gd" id="1_nsfsw"]
[ext_resource type="Texture2D" uid="uid://c7yuj4yx8q4mx" path="res://PNG/environment/layers/middleground.png" id="2_57tbt"]

[sub_resource type="TileSet" id="TileSet_nsfsw"]
physics_layer_0/collision_layer = 1

[node name="Start" type="Node2D"]
script = ExtResource("1_nsfsw")

[node name="btnStart" type="Button" parent="."]
offset_left = 842.0
offset_top = 250.0
offset_right = 1137.0
offset_bottom = 367.0
text = "Start"

[node name="btnExit" type="Button" parent="."]
offset_left = 843.0
offset_top = 444.0
offset_right = 1138.0
offset_bottom = 561.0
text = "Exit"

[node name="btnOptions" type="Button" parent="."]
offset_left = 848.0
offset_top = 632.0
offset_right = 1143.0
offset_bottom = 749.0
text = "Options"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_nsfsw")

[node name="Middleground" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(966.5, 549.5)
scale = Vector2(5.028646, 4.5041666)
texture = ExtResource("2_57tbt")

[connection signal="pressed" from="btnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="btnOptions" to="." method="_on_btn_options_pressed"]
